# Bloksel

./: .gitignore  Cargo.toml  README.md  engine.rs  manifest.json
shaders/: frag.glsl  vert.glsl  voxel.frag  voxel.vert
src/: block.rs  blocks_data.rs  cargo.toml  chunk.rs  chunk_renderer.rs  engine.rs  lib.rs  loading_screen.rs  main.rs  player.rs  shader.rs  terrain_generator.rs  ui.rs  updater.rs
src/assets/: blocks.json  mod.rs  models.rs  shaders.rs  textures.rs
src/config/: chunksys.rs  core.rs  game.rs  gameplay.rs  language.rs  mod.rs  rendering.rs  worldgen.rs
src/core/: block.rs  mod.rs  registry.rs  world.rs
src/physics/: handler.rs  material.rs  mod.rs
src/player/: controller.rs  core.rs  input.rs  mod.rs  physics.rs  state.rs
src/render/: camera.rs  core.rs  mesh.rs  mod.rs  pipeline.rs  shaders.rs  texture.rs  vulkan.rs
src/render/core/: pipeline.rs  shaders.rs
src/rendering/: camera.rs  chunk_render.rs  mesh.rs  mod.rs  texture.rs
src/shaders/: water.frag
src/terrain/: generator.rs  loader.rs  mod.rs
src/ui/: core.rs  egui_render.rs  helpers.rs  hud.rs  menu.rs  mod.rs  translations.rs  world.rs
src/ui/languages/: en.js  es.json
src/ui/shaders/: egui.frag.spv  egui.vert.spv
src/utils/: audio.rs  core.rs  error.rs  math.rs  mod.rs  ray.rs  spatial.rs
src/utils/core/: error.rs  error_types.rs  math.rs
src/world/: block.rs  block_error.rs  block_facing.rs  block_flags.rs  block_id.rs  block_mat.rs  block_material.rs  block_orientation.rs  block_tech.rs  block_visual.rs  blocks_data.rs  chunk.rs  chunk_coord.rs  core.rs  mod.rs  pool.rs  spatial.rs  storage.rs
src/world/generator/: core.rs  mod.rs  terrain.rs
src/world/storage/: core.rs  file.rs  mod.rs  region.rs
