[package]
name = "ourvoxelworldproject"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
bitflag = "0.10.1"
bitflags = { version = "2.0", features = ["serde"] }
crossbeam-channel = "0.5.15"
egui = "0.26.2"
egui-winit = "0.26.2"
gl = "0.14.0"
glam = "0.24.2"
image = "0.25.0"
lazy_static = "1.4.0"
log = "0.4.20"
noise = "0.9.0"
parking_lot = "0.12.1"
rand = "0.8.5"
rand_chacha = "0.3.1"
raw-window-handle = "0.5"
rayon = "1.10.0"
simple_logger = "5.0.0"
thiserror = "2.0.12"
thread_local = "1.1.7"
winit = "0.29"
serde = { version = "1.0", features = ["derive"] }
