[package]
name = "ourvoxelworldproject"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
bincode = "1.3"
bytemuck = "1.14"
bitflag = "0.10.1"
bitflags = { version = "2.0", features = ["serde"] }
crossbeam-channel = "0.5.15"
egui = "0.26"
egui-winit = "0.26"
gl = "0.14"
glam = "0.24"
glutin = "0.31"
glutin-winit = "0.4"
image = "0.25"
lazy_static = "1.4.0"
log = "0.4"
noise = "0.8"
parking_lot = "0.12"
rand = "0.8"
rand_chacha = "0.3"
raw-window-handle = "0.5"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
simple_logger = "4.3"
thiserror = "1.0"
thread_local = "1.1"
winit = "0.29"
